err/sapreprocessor.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/langdetect'...
Listing './lib/python3.5/site-packages/langdetect/profiles'...
Listing './lib/python3.5/site-packages/langdetect/tests'...
Listing './lib/python3.5/site-packages/langdetect/utils'...
Listing './lib/python3.5/site-packages/langdetect-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/sapreprocessor'...
Listing './lib/python3.5/site-packages/sapreprocessor/data'...
Listing './lib/python3.5/site-packages/sapreprocessor/data/lexicons'...
Listing './lib/python3.5/site-packages/sapreprocessor/data/wordlists'...
Compiling './lib/python3.5/site-packages/sapreprocessor/sapreprocessor.py'...
***   File "./lib/python3.5/site-packages/sapreprocessor/sapreprocessor.py", line 37
    TWITTER_URL_REGEX=ur"https://t.co/(\w)*"
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sapreprocessor-1.0.17.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
